# fram-demo

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: framdemo_publish_docs.yml  template_publish_docs.yml
0.1.0/: 404.html  index.html
0.1.0/demo_description/: index.html
0.1.0/reference/EventHandler/: index.html
0.1.0/reference/dashboard_app/: index.html
0.1.0/reference/demo_utils/: index.html
0.1.0/search/: search_index.json
0.1.0a1/: 404.html  index.html  objects.inv
0.1.0a1/demo_description/: index.html
0.1.0a1/how_to_run_demo/: index.html
0.1.0a1/reference/: index.html
0.1.0a1/reference/EventHandler/: index.html
0.1.0a1/reference/dashboard_app/: index.html
0.1.0a1/reference/demo_utils/: index.html
0.1.0a1/search/: search_index.json
0.1.0a1/tables/: countries.csv
0.1.0a1/what_demo_includes/: index.html
0.1.1/: 404.html
0.1.1/assets/: styles.css
0.1.1/demo_description/: index.html
0.1.1/reference/EventHandler/: index.html
0.1.1/search/: search_index.json
docs/: demo_description.md  how_to_run_demo.md  index.md  reference.md  what_demo_includes.md
docs/reference/: EventHandler.md  dashboard_app.md  demo_utils.md
framdemo/: EventHandler.py  dashboard_app.py  demo_0_run_all_demos.py  demo_10_watershed.py  demo_1_download_dataset.py  demo_2_populate_model.py  demo_3_solve_model.py  demo_4_modified_solve.py  demo_5_detailed_solve.py  demo_6_nordic_solve.py  demo_7_get_data.py  demo_8_run_dashboard.py  demo_9_edit_h5_profiles.py  demo_utils.py  install_poetry.py  run_all.py
(+2 files in other folders)
